# traceyv2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  RASTERIZER_INTEGRATION_STATUS.md  README.md  fix-permissions.sh
docs/: bvh4_simd_task.md  character_animation_task.md  cpu_thread_scaling_task.md  pipeline_layout.md  sop_backend.md
docs/tutorials/: mograph-curves-and-text.md  mograph-energy-pulse.md
editor/: README.md  index.html  package-lock.json  package.json  vite.config.ts
editor/native/: CMakeLists.txt  editor_server.cpp  editor_server.hpp  editor_server_cmds_common.hpp  editor_server_cmds_graph.cpp  editor_server_cmds_io.cpp  editor_server_cmds_material.cpp  editor_server_cmds_render.cpp  editor_server_cmds_scene.cpp  editor_server_cmds_shot.cpp  editor_server_cmds_timeline.cpp  input_state.hpp  json_helpers.hpp  main.cpp  render_engine.cpp  render_engine.hpp  scene_state.cpp  scene_state.hpp  video_exporter.hpp  video_exporter.mm  viewport_renderer.cpp  viewport_renderer.hpp
editor/native/platform/: platform.hpp  platform_macos.mm  platform_windows.cpp
editor/src/: App.css  App.tsx  index.css
editor/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/include/: tracey_api.h  tracey_types.h
editor/src-tauri/libs/: libtracey_c_api.1.0.0.dylib  libtracey_c_api.1.dylib  libtracey_c_api.dylib
editor/src-tauri/resources/shaders/rasterizer/: simple.frag.spv
editor/src-tauri/src/: main.rs  menu.rs  render_loop.rs
editor/src-tauri/src/commands/: io.rs  mod.rs  nodes.rs  presentation.rs  project.rs  render.rs  scene.rs
editor/src-tauri/src/ffi/: mod.rs  raw.rs  types.rs
editor/src-tauri/src/native_window/: mod.rs
editor/src-tauri/src/project/: asset.rs  mod.rs  recent.rs  state.rs
editor/src-tauri/src/renderer/: engine.rs  mod.rs  viewport.rs
editor/src-tauri/src/scene/: mod.rs  state.rs
editor/src-tauri/src/window_manager/: mod.rs  native_viewport.rs
examples/: CMakeLists.txt  test_c_api_nodes.cpp  test_node_system.cpp  test_transform_and_render.cpp
examples/attribute_gpu_smoke/: main.cpp
examples/attribute_vop_smoke/: main.cpp
examples/bvh/: blas.cpp  tlas.cpp
examples/c_api_smoke/: main.c
examples/cloners_smoke/: main.cpp
examples/denoiser_smoke/: main.cpp
examples/device_api/: device_setup.cpp
examples/dop_geometry_source_smoke/: main.cpp
examples/dop_smoke/: main.cpp
examples/example_projects/: main.cpp
examples/exr_inspect/: main.cpp
examples/exr_roundtrip_smoke/: main.cpp
examples/gpu/: vulkan_setup.cpp
examples/graphics_test/: CMakeLists.txt  compile_shaders.sh  graphics_test.cpp  simple.frag  simple.vert  simple.vert.spv
examples/instance_vop_smoke/: main.cpp
examples/material_program_test/: main.cpp
examples/materialx_smoke/: main.cpp
examples/metal_interop_spike/: main.mm
examples/mograph_curves_smoke/: main.cpp
examples/projects/: README.md
examples/projects/01_geometry_basics/: 01_geometry_basics.tracey
examples/projects/02_displaced_sphere/: 02_displaced_sphere.tracey
examples/projects/03_scatter_cubes/: 03_scatter_cubes.tracey
examples/projects/04_delete_carve/: 04_delete_carve.tracey
examples/projects/05_sort_color/: 05_sort_color.tracey
examples/projects/06_particles_wind/: 06_particles_wind.tracey
examples/projects/07_particles_attract/: 07_particles_attract.tracey
examples/projects/08_particles_pathtraced/: 08_particles_pathtraced.tracey
examples/projects/09_instance_vop_swarm/: 09_instance_vop_swarm.tracey
examples/pt_backend_compare/: main.cpp
examples/rasterizer_test/: CMakeLists.txt  rasterizer_test.cpp
examples/ray_tracing/: path_tracer.cpp  ray_tracer.cpp
examples/scene_export_smoke/: main.cpp
examples/scene_renderer/: main.cpp
examples/scene_renderer/shaders/: diffuse_hit.isf  material_vm.glsl  pbr_lib.glsl  ray_gen.glsl  ray_gen.isf  resolve.glsl  resolve.isf  sky_miss.glsl  sky_miss.isf  uber_hit.glsl
examples/scene_renderer/shaders/rasterizer/: bones.vert  bones.vert.spv  gizmo.frag  gizmo.vert  gizmo.vert.spv  ground.frag  ground.frag.spv  ground.vert  ground.vert.spv  guides.frag  guides.vert  guides.vert.spv  lines.frag  lines.frag.spv  lines.vert  lines.vert.spv  points.frag  points.frag.spv  points.vert  points.vert.spv  position_only.frag  position_only.frag.spv  position_only.vert  position_only.vert.spv
examples/scenes/: cornell_box.gltf  cornell_box.json  cornell_box_closed.gltf  simple_scene.json  usd_animated.usda  usd_cube.usda  usd_lit_stage.usda  usd_textured.usda  usd_zup_facevarying.usda
examples/skinning_smoke/: main.cpp
examples/sop_eval_test/: main.cpp
examples/stage_document_smoke/: main.cpp
examples/usd_anim_smoke/: main.cpp
examples/usd_compose_smoke/: main.cpp
examples/usd_import_smoke/: main.cpp
examples/usd_inspect/: main.cpp
examples/usd_roundtrip_smoke/: main.cpp
examples/usd_smoke/: main.cpp
examples/usd_write_smoke/: main.cpp
examples/vop_codegen_smoke/: main.cpp
examples/wavefront/: wavefront.cpp  wavefront_isf.cpp
examples/wavefront/shaders/: diffuse_hit.isf  ray_gen.isf  resolve.isf  sky_miss.isf
scripts/: bootstrap_deps.sh  build-all.sh  dev.sh
shaders/rasterizer/: compile_shaders.sh  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv
src/: blas.cpp  blas.hpp  bvh_node.hpp  hit.hpp  ray.hpp  tlas.cpp  tlas.hpp  types.hpp
src/c_api/: CMakeLists.txt  tracey_api.cpp  tracey_api.h  tracey_c.cpp  tracey_c.h  tracey_types.h
src/core/: blas.cpp  blas.hpp  bvh_node.hpp  hit.hpp  intersect.cpp  intersect.hpp  parallel.hpp  ray.hpp  tlas.cpp  tlas.hpp  types.hpp
src/device/: bottom_level_acceleration_structure.hpp  buffer.hpp  device.cpp  device.hpp  image_2d.hpp  top_level_acceleration_structure.hpp
src/dops/: dop_graph.cpp  dop_graph.hpp  dop_node.cpp  dop_node.hpp  dop_registry.cpp  dop_registry.hpp  eval_context.hpp  parameter.hpp  register_builtins.cpp  register_builtins.hpp  serialization.cpp  serialization.hpp  sim_state.hpp
src/geometry/: attribute.cpp  attribute.hpp  attribute_class.hpp  (+8 more)
(+466 files in other folders)
